# musica-photo-decomp-rates

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
driver/: Makefile  driver.F90  srclist  test_nml
src/: CMakeLists.txt  dissociation_class.F90  etf_mod.F90  jrates_mod.F90  module_prates_tuv.F90  module_rxn.F90  no2_dissociation_class.F90  o3_dissociation_class.F90  phot_specs_mod.F90  photo_utils.F90
src/photo_rates/: module_prates_tuv.F90  tuv_photolysis.F90
test/: CMakeLists.txt
test/empty_atmos/: test.F90
test/empty_atmos/data/: test_nml
test/integration/: CMakeLists.txt  ccpp_kinds.F90  compare_output.sh  driver.F90
test/integration/data/: TUV.diags  compare_output.sh  profiles.out  test_nml
test/share/: numer.F90  numer_test.F90
